# zeditor

./: .gitignore  AppIcon.icns  CLAUDE.md  Cargo.toml  Info.plist  build.rs  bundle.sh  update.sh
src/: assets.rs  editor.rs  hotkey.rs  main.rs  preferences.rs  preferences_window.rs
